Permitir ingresar  tamaño de la matriz

--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>controlador de auto</h1>
+     <form id="Controlador-form">
+      <label for="Comandos">Comandos :</label>
+      <input type="text" id="Cadena" />
+      <button type="submit" id="Ejecutar-button">Ejecutar</button>
     </form>
-    <div id="resultado-div"></div>
-
+    <h1>Grid Creator</h1>
+    <div id="grid-div"></div>
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
