--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
   <title>Controlador de Auto</title>
 </head>
 <body>
-  <h1>Controlador de Auto</h1>
+ 
   <form id="car-form">
-    <label for="posicion">Comandos (ejemplo: 1,2 N/IA/IA/IA):</label>
+    <label for="posicion">Comandos:</label>
     <input type="text" id="posicion" required>
     <button type="submit">Ejecutar</button>
   </form>
   <div id="grid-div"></div>
-  <script type="module" src="./src/presenter.js"></script>
+  
   <p id="posicion-inicial">Posicion inicial</p>
   <p id="comandos">Comandos</p>
   <p id="posicion-final">Posición final: </p>
-  
+  <script type="module" src="./src/presenter.js"></script>
 </body>
 </html>
 
